// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage render a fallback when app is not available 1`] = `
<DocumentFragment>
  <div
    data-testid="error"
  >
    <h1
      data-testid="error-title"
    >
      error2
    </h1>
  </div>
</DocumentFragment>
`;

exports[`ErrorMessage renders 1`] = `
<DocumentFragment>
  <div
    data-testid="error"
  >
    <h1
      data-testid="error-title"
    >
      Translated error message
    </h1>
  </div>
</DocumentFragment>
`;
